--- a/index.html
+++ b/index.html
@@ -174,6 +174,10 @@ be molded and shaped to your project's needs.</p>
 </li>
 <li>Audio subpackage</li>
 </ul>
+<p>Code-Level TODOs:
+- Use isort for import handling
+- Use black for automatic reformat code
+- Create repo badges to track codebase quality</p>
               
             </div>
           </div>
@@ -228,5 +232,5 @@ be molded and shaped to your project's needs.</p>
 
 <!--
 MkDocs version : 1.2.3
-Build Date UTC : 2021-11-10 17:18:49.321215+00:00
+Build Date UTC : 2021-11-29 03:39:53.449487+00:00
 -->
